-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2026-02-16
-
200
-
🟥 DDL
-
None
-
None
-
None
-
None
-
None
-
None
A race condition can occur when a timeseries upgrade/downgrade DDL coordinator runs concurrently with a setFCV command, particularly in stepdown scenarios. This results in a tassert with error code 11483004: "Cannot upgrade to viewless timeseries without the feature flag enabled".
- is caused by
-
SERVER-115906 Create TimeseriesUpgradeDowngradeCoordinator for sharded time-series collections
-
- Closed
-
- related to
-
SERVER-119697 Investigate if ShardingDDLCoordinators check feature flags inside AlternativeClientRegion
-
- Closed
-