SERVER-118777 Propagate OFCV in the participant command of timeseries upgrade downgrade coordinator (#47471)

GitOrigin-RevId: 8b84ab3524f3ee7796d45d66a129a2988a3c4054